configsync/clusters/test/namespaces/team-1/network-policy-default-deny-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: team-1
spec:
  podSelector: {}
  policyTypes:
  - Egress
